--- a/atividade6/views/dados.html
+++ b/atividade6/views/dados.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="..\style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>Dados do agendamento</h1>
+    <div class="container">
+
+        <div class="row">
+            <div class="col-12 bg-primary text-white text-center p-5">
+                <img src="..\ucb.png" alt="catolica">
+            </div>
+        </div>
+        <article>
+            <h1>Dados do agendamento</h1>
+            <a href="index.html">Home</a>
+        </article>
 </body>
 </html>
