--- a/atividade6/views/index.html
+++ b/atividade6/views/index.html
@@ -5,20 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcar agendamento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="..\style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <form action="/dados" method="post">
-        <label for="nome">Nome: </label>
-        <input type="text" id="nome"><br>
-        <label for="end">Endereço: </label>
-        <input type="text" id="end"><br>
-        <label for="tel">Telefone: </label>
-        <input type="text" id="tel"><br>
-        <label for="dataAg">Data de agendamento: </label>
-        <input type="date" id="dataAg"><br>
-        <input type="submit" id="enviar" value="Enviar">
-        <input type="reset" id="limpar" value="Limpar">
-    </form>
+    <div class="container">
+
+        <div class="row">
+            <div class="col-12 bg-primary text-white text-center p-5">
+                <img src="..\ucb.png" alt="catolica">
+            </div>
+        </div>
+        <article>
+            <h1>Formulário de Dados</h1>
+            <form class="row g-3" action=".\dados.html" method="post">
+                <div class="col-md-6">
+                    <label for="inputName" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="inputName">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputPhone" class="form-label">Telefone</label>
+                    <input type="text" class="form-control" id="inputPhone">
+                </div>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Endereço</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Rua Fulano de Tal 123">
+                </div>
+                <div class="col-md-4">
+                    <label for="inputDate" class="form-label">Data do agendamento</label>
+                    <input type="date" class="form-control" id="inputDate">
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+            </form>
+        </article>
+    </div>
 </body>
 </html>
