--- a/atividade6/style.css
+++ b/atividade6/style.css
@@ -6,7 +6,7 @@ body{
     background-color: white;
     padding-bottom: 20px;
     border-radius: 0px 0px 15px 15px;
-    box-shadow: 3px 3px black;
+    box-shadow: 8px 6px 10px black;
 }
 
 h1{
